[package]
name = "talos"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
cron = "0.15.0"
dashmap = "6.1.0"
deadpool-redis = { version = "0.22.1", optional = true, features = [
    "script",
    "streams",
    "tokio-comp",
] }
futures = "0.3.31"
hostname = "0.4.2"
metrics = { version = "0.24.3", optional = true }
nanoid = "0.4.0"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rand = "0.9.2"
redis = { version = "1.0.2", features = ["aio", "tokio-comp"], optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"


[features]
# 默认不开启分布式功能，保持轻量
default = ["distributed", "workflow"]
# 分布式启用
distributed = ["dep:deadpool-redis", "dep:redis"]

workflow = []
metrics = ["dep:metrics"]
